--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="images/logo.png" class="logo ">
+    <img src="images/logo.png" class="logo">
 
     <div class="content">
       <h1>CITY UNDER CONSTRUCTION</h1>
@@ -32,8 +32,8 @@
         </div>
       </div>
       <span>
-        <a href=""><img src="images/twitter.png" style="margin-left: 0px;"> </a>
-        <a href=""><img src="images/discord.png" ></a>
+        <a href="https://twitter.com/Arbitropolis"><img src="images/twitter.png" style="margin-left: 0px;"> </a>
+        <a href="https://discord.gg/kcFzWYe7bY"><img src="images/discord.png" ></a>
         <a href=""><img src="images/opensea.png" ></a>
       </span>
     </div>
