--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arbitropolis</title>
+  <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,12 +35,12 @@
       <span>
         <a href="https://twitter.com/Arbitropolis"><img src="images/twitter.png" style="margin-left: 0px;"> </a>
         <a href="https://discord.gg/kcFzWYe7bY"><img src="images/discord.png" ></a>
-        <a href=""><img src="images/opensea.png" ></a>
+        <a href="https://opensea.io/collection/arbitropolis-citizen-permit/drop"><img src="images/opensea.png" ></a>
       </span>
     </div>
     <div class="tlc">
-        <h5>Access Key:<a href=""><span> Citizen Permit [NFT]</span></a></h5>
-        <p>Currency:<a href=""><span> Arbitropolis Credit [ACR]</span></a></p> 
+        <h5>Access Key:<a href="https://opensea.io/collection/arbitropolis-citizen-permit"><span> Citizen Permit [NFT]</span></a></h5>
+        <p>Currency:<a href="#"><span> Arbitropolis Credit [ACR]</span></a></p> 
       </div>
     <img src="images/logo.png" class="arbp">
   </div>
