--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="images/logo.png" class="logo">
 
     <div class="content">
-      <h1>CITY UNDER CONSTRUCTION</h1>
+      <h1>$CITY UNDER CONSTRUCTION</h1>
       <div class="launch-time">
         <div>
           <p id="days">00</p>
